--- a/MasterPage.master
+++ b/MasterPage.master
@@ -4,17 +4,66 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <title></title>
+    <title>AdVenTure Out|SporTy</title>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
+    <link href="StyleSheet.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
-        <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
+
+        <div id="wrapper">
+  <div id="left">
+    <div id="author"><img src="images/LOGO.png" height="300" width="100%"/></div>
+    
+    <div class="nav-wrapper">
+       <nav class="nav-menu">
+           <ul class="clearfix">
+         <li class="normal"><a href="default.aspx">Home</a></li>
+         <li class="normal"><a href="login.aspx" >Login </a> </li>
+         <li class="submenu"><a href="#">Categories</a>
+             <ul class="sub-menu">
+            <li><a href="#mens">Mens</a></li>
+            <li><a href="#womens">Women</a></li>
+            <li><a href="#outdoor">Outdoor</a></li>
+         </ul> 
+
+         </li>
+
+        <li class="submenu"><a href="#">Order</a>
+             <ul class="sub-menu">
+            <li><a href="#orderhistory">Order History</a></li>
+            <li><a href="#ordercompletion">Order Completion</a></li>
+         </ul> 
+	</li>
+         <li class="normal"><a href="contacts.aspx">Contact Us</a></li>
+      </ul> 
+       </nav>
+    </div>
+
+  </div>
+  <div id="main">
+  <div id="contents">
+  <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
         
         </asp:ContentPlaceHolder>
-    </div>
+  </div>
+ 
+  </div>
+            
+        <div id="footer">Copyright © 2016 BY AZYLEEN YUSOF [LCB/3509]
+                <br />
+            <a href="http://validator.w3.org/check?uri=referer">Validate HTML</a> |
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a> |
+            <a href="http://achecker.ca/checker/?uri=referer">Check WCAG</a>
+     </div>
+        
+        </div>
+       
+    
+        
+    
     </form>
+            
 </body>
 </html>
