--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -130,3 +130,199 @@
      overflow-y:hidden;
      height:650px;
  }
+
+  /*end of page 1*/
+
+#contact {
+    margin:0px;
+    background-image:url('../images/map.png');
+    height:620px;
+    z-index:0;
+  
+    
+}
+#contact #map {
+    height:100%;
+    width:45%;
+    float:left;
+}
+
+#contact #form{
+    margin-top:10px;
+    background-color:#666;
+    width:50%;
+    opacity:.8;
+    float:right;
+    height:510px;
+    padding:20px;
+    color:white;
+    z-index:12;
+   
+
+
+}
+#contact #form caption{
+
+    font-size:2em;
+}
+
+#contact #form table {
+    width:500px;
+    font-size:1.2em;
+
+}
+
+#contact #form input[type=text],#contact #form textarea{
+
+    padding:10px;
+    border:5px solid #e4dede;
+    background-color:#000;
+    color:white;
+    font-size:1.2em;
+   
+
+}
+
+    #contact #form input[type=submit],#contact #form input[type=reset] {
+    
+    padding:5px;
+    border:1px solid #000;
+    background-color:#000 ;
+    color:white;
+    font-size:1em;
+    }
+    #footer{
+    color: white;
+    text-align: center;
+    font-size:x-small;
+    padding:20px;
+    font-size:.8em;
+    
+}
+
+    #footer a {
+        text-decoration:none;
+        color:red;
+
+    }
+    #searchproduct {
+        text-align:left;
+        color:white;
+        width:100%;
+        position:fixed;
+        background-color:black;
+        margin:0;
+        padding:0;
+        display:block;
+        
+    }
+    #searchproduct fieldset {
+        padding:10px;
+        border:none;
+        margin-left:20px;
+    }
+
+    #searchproduct fieldset input[type=text],  #searchproduct fieldset select,  #searchproduct fieldset input[type=submit]{
+        padding:5px;
+        background-color:black;
+        border:1px solid white;
+        color:white;
+    }
+    .dropdown{
+        display:inline-block;
+        position:relative;
+
+    }
+    .dropdown-content {
+
+        display:none;
+        position:absolute;
+        z-index:1;
+    }
+    .dropdown:hover 
+    .dropdown-content {
+        display:none;
+    }
+
+    /*drop down*/
+
+    
+    .clearfix:after {
+    content: "";
+    display: table;
+    }
+
+
+
+    .nav-wrapper {
+       
+       width:300px;
+       background:#000;
+       color:white;
+       letter-spacing:2px;
+    
+    }
+    .nav-wrapper a{
+        text-decoration:none;
+       
+        color:white;
+    }
+     
+    .nav-menu {
+       position:relative;
+       display:inline-block;
+       
+    }
+     
+    .nav-menu li {
+       margin-left:-20px;
+       list-style-type: none;
+       padding:5px;
+       font-size:1em;
+       width:200px;
+
+    }
+    .nav-menu li:hover {
+   background-color:#0e0b0b;
+   color:white;
+    }
+     
+    .sub-menu {
+       position:absolute;
+       display:none;
+       background:#000;
+     
+       
+    }
+    .submenu {
+        background-image:url("images/button.png");
+        background-position:left;
+        border-top:1px solid #666;
+        border-bottom:1px solid #666;
+     
+    }
+    .normal {
+        background-color:black;
+        border-top:1px solid #666;
+        border-bottom:1px solid #666;
+    }
+    .nav-menu ul li:hover > ul {
+   display:inline-block;
+   background-color:#0e0b0b;
+   color:white;
+
+}
+
+       .nav-menu ul li:hover > ul:hover {
+   display:inline-block;
+   background-color:#000;
+   color:white;
+}
+    .nav-menu > ul > li:after {
+   
+   font-size: .5em;
+   display: inline;
+   position: relative;
+
+   }
+
